# alex-0d18-gather

./: .env.example  .gitignore  .plan  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: config.rs  db.rs  email.rs  error.rs  events.rs  main.rs  reminders.rs  routes.rs  state.rs  storage.rs
backend/src/auth/: links.rs  middleware.rs  mod.rs  password.rs  routes.rs  session.rs
backend/src/email/: templates.rs
backend/src/models/: activity.rs  comment.rs  event.rs  invitation.rs  mod.rs  user.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/auth/: AuthProvider.tsx  ProtectedRoute.tsx  authContextValue.ts  useAuth.ts
frontend/src/lib/: authApi.ts  eventsApi.ts
frontend/src/pages/: AuthPage.tsx  DashboardPage.tsx  EventCreatePage.tsx  EventDetailPage.tsx  HomePage.tsx  InvitationRsvpPage.tsx  ProfilePage.tsx
frontend/tests/: AuthPage.test.tsx  EventCreatePage.test.tsx  InvitationRsvpPage.test.tsx  happyPath.e2e.test.tsx
migrations/: 00000000000000_initial.sql  20260717063700_create_users.sql  20260717072100_add_user_profile_fields.sql  20260717073000_create_events.sql  20260717075600_create_invitations.sql  20260717080900_add_invitation_rsvp.sql  20260717082400_create_event_comments.sql  20260717082900_create_event_activity_entries.sql  20260717084300_create_event_reminders.sql
scripts/: build-self-hosted.sh  run-self-hosted.sh
